--- a/TwitchDBWebsite/Views/Shared/_Layout.cshtml
+++ b/TwitchDBWebsite/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="People" asp-action="Index">View People</a></li>
+                    <li><a asp-area="" asp-controller="People" asp-action="Create">Add Person</a></li>
+                    <li><a asp-area="" asp-controller="People" asp-action="Edit">Edit Person</a></li>
+                    <li><a asp-area="" asp-controller="People" asp-action="Delete">Delete Person</a></li>
                 </ul>
             </div>
         </div>
