--- a/TwitchDBWebsite/Views/People/Create.cshtml
+++ b/TwitchDBWebsite/Views/People/Create.cshtml
@@ -13,17 +13,17 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+                <label class="control-label">First Name</label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                <label class="control-label">Last Name</label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TwitchUN" class="control-label"></label>
+                <label class="control-label">Twitch Username</label>
                 <input asp-for="TwitchUN" class="form-control" />
                 <span asp-validation-for="TwitchUN" class="text-danger"></span>
             </div>
